# kopf

./: .codacy.yaml  .pylintrc  .travis.yml  kopf.rb  pyproject.toml  requirements.txt  setup.py  zz_example_redis.py  zzrediscluster_crd.yaml
docs/: configuration.rst  kwargs.rst
docs/walkthrough/: creation.rst  deletion.rst  updates.rst
examples/02-children/: example.py
examples/03-exceptions/: example.py
examples/05-handlers/: example.py
examples/98-login-create/: example-bgtask.py  example-bgtask2.py  example.py
examples/99-all-at-once/: example.py
kopf/: __init__.py  cli.py  config.py  crd.py  on.py
kopf/clients/: auth.py  classes.py  events.py  fetching.py  patching.py  watching.py
kopf/engines/: logging.py  peering.py  probing.py  sleeping.py
kopf/reactor/: activities.py  causation.py  daemons.py  discovery.py  handling.py  invocation.py  lifecycles.py  processing.py  queueing.py  registries.py  running.py  state.py
kopf/storage/: finalizers.py  states.py
kopf/structs/: callbacks.py  configuration.py  containers.py  credentials.py  dicts.py  diffs.py  handlers.py  lastseen.py  patches.py  progress.py  resources.py
kopf/toolkits/: legacy_registries.py  runner.py
kopf/utilities/: crds.py  piggybacking.py
tests/: test_finalizers.py  test_lastseen.py  test_liveness.py
tests/authentication/: test_authentication.py
tests/basic-structs/: test_causes.py
tests/e2e/: test_examples.py
tests/handling/: test_activity_triggering.py  test_no_handlers.py
tests/hierarchies/: test_name_harmonizing.py
tools/: kind-config.yaml  kind-for-travis.sh
(+8 files in other folders)
