[tool.poetry]
name = "kopf"
version = "0.23.2"
description = "Kubernetes Operator Pythonic Framework (Kopf)"
keywords = ["kubernetes", "operator", "framework", "python", "k8s"]
authors = [
    "Sergey Vasilyev <sergey.vasilyev@zalando.de>",
]
maintainers = [
    "Sergey Vasilyev <sergey.vasilyev@zalando.de>",
    "Chiara Mezzavilla <chiara@zalando.de>",
]
documentation = "https://kopf.readthedocs.io"
homepage = "https://github.com/zalando-incubator/kopf"
readme = "README.md"
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/zalando-incubator/kopf/issues"
"Source Code" = "https://github.com/zalando-incubator/kopf"

[tool.poetry.scripts]
kopf = "kopf.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.7.4"
click = "^7.0"
iso8601 = "^0.1.12"
aiohttp = "^3.6.2"
aiojobs = "^0.2.2"
pykube-ng = ">=0.27"

[tool.poetry.dev-dependencies]
pytest-aiohttp = "^0.3.0"
pytest-asyncio = "^0.10.0"
pytest-mock = ">=1.11.1"
pytest-cov = "^2.8.1"
pytest = "^5.3.2"
aresponses = "^1.1.2"
asynctest = "^0.13.0"
freezegun = "^0.3.12"
codecov = "^2.0.15"
coveralls = "^1.9.2"
mypy = "^0.740"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
